--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Tutoria Test: setting up pages
+title: Tutorial Test - setting up pages
 description: testing out feature, demonstrate tutorials here eventually 
